Added message when no results are found

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -193,6 +193,10 @@
   justify-content: space-around;
   padding-bottom: 3em;
 }
+.noresultstext {
+  padding-top: 5%;
+  font-weight: 600;
+}
 .exhibitor-feed .exhibitor-box{
   margin: 0em 5px 0em 5px;
   overflow: hidden;
