--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -43,7 +43,7 @@
   flex-direction: row;
   justify-content: center;
 }
-.exhibitors .filter-special img{
+.exhibitors .filter-special input[type='image']{
   padding: 0.5em;
   height: 4em;
   cursor: pointer;
@@ -52,7 +52,7 @@
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
-.exhibitors .filter-special img:hover{
+.exhibitors .filter-special input[type='image']:hover{
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
   -webkit-transform: scale(1.25);
@@ -278,7 +278,7 @@
 
 .filter-special:hover{
   overflow: hidden;
-  img::before{
+  input[type='image']::before{
     position: absolute;
     top: 0;
     left: -50%;
@@ -292,7 +292,7 @@
     -webkit-transform: skewX(-25deg);
     transform: skewX(-25deg);
   }
-  img:hover::before{
+  input[type='image']:hover::before{
     -webkit-animation: shine .6s;
     animation: shine .6s
   }
