--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -202,6 +202,7 @@
   text-align:center;
 
   .showmorebutton {
+    outline: none;
     text-align: center;
     background-color:#00d78f;
     font-weight: 200;
