--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -78,7 +78,7 @@
   }
 }
 
-.checkbox-filtering{
+.checkboxes{
   padding: 0em 3em 1em 3em;
   display: flex;
   flex-direction: row;
@@ -88,6 +88,18 @@
 	max-width: 700px;
 	//align-self: center;
 }
+
+.checkbox-filtering{
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+	margin: 0;
+	max-width: 100px;
+	//align-self: center;
+}
+
 .checkbox-filtering label{
 	display: block;
 	//height: 100%;
@@ -102,7 +114,7 @@
 	font-size: 0.8em;
 	padding: 0em 0.5em 0em 0.5em;
 	//vertical-align: middle;
-	align-self: center;
+	align-self: flex-start;
 	//display: table-cell;
 }
 
