--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -95,7 +95,7 @@
   flex-wrap: wrap;
   justify-content: flex-start;
 	margin: 0;
-	max-width: 100px;
+	max-width: 130px;
 	//align-self: center;
 }
 
@@ -197,6 +197,10 @@
 // border: 1px solid #aaa!important;
 //}
 
+#startuplabel {
+  color: $melon;
+  font-weight: bold;
+}
 
 .exhibitor-feed {
   display: flex;
