--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -2,32 +2,38 @@
 @import '../../styles/_fonts';
 
 .pagesection {
-  display: flex;
-  flex-direction: row;
+}
+
+.with-row {
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #00d790;
+    margin: 15px;
 }
 .image {
-  width: 50%;
   img {
-    width: 100%;
-    max-height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    width: 95%;
   }
 }
 .dark {
   background-color: $licorice;
 }
 .pagesection.right {
-  flex-direction: row-reverse;
 }
 .pagesection-body-container .pagesection-body p {
   padding-bottom: 1em;
 }
 .pagesection-body-container {
-  width: 50%;
   .pagesection-body {
     padding: 1em;
     max-width: 35em;
     margin: auto;
-    h1 {
+    text-align: center;
+    .h1_small {
       font-size: 1.75em;
       line-height: 1.25em;
       padding-bottom: 1em;
@@ -39,6 +45,9 @@
     }
     .title {
       color: blue;
+    }
+    hr {
+        margin-left: 10px;
     }
   }
 }
@@ -63,7 +72,7 @@
   }
   .pagesection {
     display: flex;
-    flex-direction: column;
+    //flex-direction: column;
     width: 100vw;
   }
   .pagesection-body-container {
@@ -76,7 +85,6 @@
   }
 
   .pagesection.right {
-    flex-direction: column;
   }
   .dark {
     background-color: white;
