Tried to make it look better on mobiles

--- a/src/components/PageSections/pagesections.scss
+++ b/src/components/PageSections/pagesections.scss
@@ -42,6 +42,15 @@
     border-color: #2d2d2c;
     border-radius: 20px;
 }
+.outer_sections_div_mobile {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 1em;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #2d2d2c;
+    border-radius: 20px;
+}
 
 #intro_section {
     width: 50%;
