Adapted intro section to mobile and changed width

--- a/src/components/PageSections/pagesections.scss
+++ b/src/components/PageSections/pagesections.scss
@@ -43,7 +43,7 @@
     border-radius: 20px;
 }
 .outer_sections_div_mobile {
-    width: 100%;
+    width: 80%;
     margin: auto;
     margin-bottom: 1em;
     border-style: solid;
@@ -54,6 +54,11 @@
 
 #intro_section {
     width: 50%;
+    margin: auto;
+}
+
+#intro_section_mobile {
+    width: 80%;
     margin: auto;
 }
 
