More mobile adjustments

--- a/src/components/PageSections/pagesections.scss
+++ b/src/components/PageSections/pagesections.scss
@@ -43,7 +43,7 @@
     border-radius: 20px;
 }
 .outer_sections_div_mobile {
-    width: 80%;
+    width: auto;
     margin: auto;
     margin-bottom: 1em;
     border-style: solid;
@@ -58,7 +58,7 @@
 }
 
 #intro_section_mobile {
-    width: 80%;
+    width: auto;
     margin: auto;
 }
 
