--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -50,7 +50,7 @@
   transform: scale(1);
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
-  outline: none;
+  outline: 0;
 }
 .exhibitors .filter-special input[type='image']:hover{
   -webkit-transition: .3s ease-in-out;
