--- a/src/components/MatchingSection/MatchingSection.scss
+++ b/src/components/MatchingSection/MatchingSection.scss
@@ -2,8 +2,13 @@
 @import '../../styles/_fonts';
 
 .questions {
-    margin-bottom: 275px;
-    width: 600px;
+    margin: 0px 10px 275px 10px;
+    
+
+    .trycontainer {
+        margin-top: 30px;
+        text-align: center;
+    }
 
     .optioncontainer {
         text-align: center;
@@ -69,6 +74,41 @@
         background-color: $melon;
     }
 }
+
+.star-ratings-css {
+    unicode-bidi: bidi-override;
+    text-align: center;
+    color: #c5c5c5;
+    font-size: 25px;
+    height: 25px;
+    width: 100px;
+    left: -14.5px;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 10px;
+    text-shadow: 0px 1px 0 #a2a2a2;
+
+    .rating-text {
+        font-size: 14px;
+        color: white;
+    }
+    
+    &-top {
+      color: white;
+      padding: 0;
+      position: absolute;
+      z-index: 1;
+      display: block;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+    }
+    &-bottom {
+      padding: 0;
+      display: block;
+      z-index: 0;
+    }
+  }
 
 
 .partners {
