Changed diversity and sustainabily icons

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -85,8 +85,8 @@
   justify-content: center;
 }
 .exhibitors .filter-special input[type='image']{
-  padding: 1.5em;
-  height: 6em;
+  padding: 0 1.5em 0 1.5em;
+  height: 11em;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: .3s ease-in-out;
