added purpose to exhibitor modal. hid exhibitor name from modal

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -29,6 +29,11 @@
     width: 100%;
   }
 }
+
+.purpose-text {
+	text-transform: lowercase;
+
+}
 .icon-group .special{
   width: 7em;
   display: block;
