--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -537,3 +537,15 @@
     }
   }
 }
+
+.map-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.iframe-map {
+  border: solid 1px #f5f5f5;
+  width: 100%;
+  min-height: 250px;
+}
