--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -416,6 +416,16 @@
 .supercontainer{
   width:100%;
   text-align: center;
+
+  .matching_link {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+
+  .matching_link_style {
+    font-weight: 700 !important;
+  }
 }
 
 .drop1 {
