temp fix for disappearing helmet text

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,13 @@ li {
   padding: 0px;
 }
 
+.helmet {
+	padding-top: 1.5em;
+}
+.bold {
+	font-weight: bold;
+}
+
 .dark-theme{
     background-color: $licorice;
     .title {
