--- a/src/components/Maps/maps.scss
+++ b/src/components/Maps/maps.scss
@@ -1,47 +1,48 @@
 @import '../../styles/_variables';
 @import '../../styles/_fonts';
 
-// .maps {
-//   width: 100%;
-//   height:100%;
-//   margin: auto;
-// }
-//
-// .maps-grid {
-//   max-width: 100%;
-//   height: 100%;
-//   display: flex;
-// 	flex-direction: row;
-// 	flex-wrap: wrap;
-// 	justify-content: space-around;
-//
-// }
-// .map-item {
-// 		width:20em;
-//     display: flex;
-//     flex-direction: column;
-//     cursor: pointer;
-//     cursor: hand;
-// 		padding-top: 1em;
-//
-// 		.name{
-// 		 	text-align: center;
-// 		}
-//
-// 		&:hover {
-// 		  cursor: pointer;
-// 		  cursor: hand;
-// 		  .name{
-// 		    text-decoration: underline;
-// 		  }
-// 		}
-// }
-//
-// .modalimage-map {
-//   img{
-//     width: 100%;
-//   }
-// }
+.maps {
+  width: 100%;
+  height:100%;
+  margin: auto;
+}
+
+.maps-grid {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+
+}
+
+.map-item {
+		width:20em;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    cursor: hand;
+		padding-top: 1em;
+
+		.name{
+		 	text-align: center;
+		}
+
+		&:hover {
+		  cursor: pointer;
+		  cursor: hand;
+		  .name{
+		    text-decoration: underline;
+		  }
+		}
+}
+
+.modalimage-map {
+  img{
+    width: 100%;
+  }
+}
 
 .center p {
 	text-align: center !important;
@@ -49,6 +50,10 @@
 }
 .bold {
 	font-weight: bold;
+}
+
+.space {
+	padding-top: 1em;
 }
 
 .licorice a {
