--- a/src/layouts/Mapspage/index.scss
+++ b/src/layouts/Mapspage/index.scss
@@ -3,7 +3,7 @@
 
 .Mapspage-container {
   padding: 3em 0em;
-  max-width: $page-width;
+  width: $page-width;
   //position: static;
   margin: auto;
   //padding: 1em 0em;
