--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -82,7 +82,7 @@
                 padding-right:10px;
                 text-align: right;
                 display: block;
-                color: white;
+                color: $licorice;
 
             }
 
