--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -66,7 +66,7 @@
 #navbar{
 		font-size: 0.7em;
 }
-} 
+}
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
     #navbar{
@@ -82,9 +82,15 @@
                 padding-right:10px;
                 text-align: right;
                 display: block;
-                color: white;
-
             }
+
+						.white {
+							color: white;
+						}
+
+						.black {
+							color: black;
+						}
 
             .menu{
                 display: flex;
