WIP on contact card

--- a/src/components/Contacts/contact.scss
+++ b/src/components/Contacts/contact.scss
@@ -1,6 +1,14 @@
 @import "../../styles/_variables";
 @import "../../styles/global";
 
+.contact-list {
+  z-index: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .row {
   display: flex;
   flex-direction: row;
