--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -12,6 +12,70 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   transition: 0.4s;
 }
 
+.card-container2 {
+  position: relative;
+  margin: 30px auto;
+  width: 320px;
+  height: 150px;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transform: scale(1.05)
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.7);
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+    transition: none;
+    
+}
+
+&:hover:after {
+  width: 120%;
+  background-color: rgba(255,255,255,0);
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+  #topBar {
+    width: 100%;
+    position: absolute;
+    height: 8px;
+    border-radius: 10px 10px 0 0;
+    background-color: #00D790;
+  }
+
+  #text-area {
+    margin-top:30px;
+    text-align: center;
+    .textcontent {
+      text-align: center;
+    }
+
+    #clean_card_name {
+      font-size: 25px;
+      color: $melon;
+      font-weight: 400;
+    }
+  }
+}
+
 .card-container .card_image {
   width: inherit;
   height: inherit;
@@ -23,6 +87,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   height: inherit;
   border-radius: 40px;
   object-fit: cover;
+  object-position: top;
   filter: gray; /* IE5+ */
       -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
       -webkit-transition: all .8s ease-in-out; 
@@ -39,7 +104,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   text-align: center;
   width: 100%;
   height: 100px;
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(0,0,0, 0.6);
   border-radius: 0 0 40px 40px;
 }
 
@@ -50,11 +115,11 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 }
 
 #card_text {
-  margin: 5px 0 0 10px !important;
+  margin: 0 0 0 15px !important;
 }
 
 #card_name {
-  color: white;
+  color: $melon;
   font-weight: 500;
   font-size: 25px;
 }
@@ -68,5 +133,5 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 }
 
 .title-white {
-  color: white;
+  color: $melon;
 }
