--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -114,6 +114,10 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     -5px -5px 30px 15px rgba(0,0,0,0.22);
 }
 
+.picturecontent {
+  border-radius: 10px 0 0 10px;
+}
+
 #card_text {
   margin: 0 0 0 15px !important;
 }
@@ -134,4 +138,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 .title-white {
   color: $melon;
+}
+
+.cardcontent {
+  display: inline-flex;
 }
