--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -62,9 +62,14 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   }
 
   #text-area {
-    margin-top:30px;
+    margin-top:15px;
+    
     text-align: center;
+    
     .textcontent {
+      margin-left: 15px;
+      margin-right: 15px;
+      
       text-align: center;
     }
 
@@ -73,6 +78,24 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
       color: $melon;
       font-weight: 400;
     }
+  }
+
+  #img-area {
+    margin-top: 8px;
+    width: 115px;
+    height: 115px;
+    
+  }
+  #clean_card_email {
+    margin-left: 10px;
+    margin-right: 30px;
+    justify-content: center;
+    text-align: center;
+  }
+  .picturecontent {
+    border-radius: 0px 0 0 10px;
+    box-shadow: 0 4px 2px 0 rgba(27, 27, 27, 0.2), 0 6px 2px 0 rgba(17, 17, 17, 0.19);
+
   }
 }
 
@@ -101,7 +124,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 .card-container .card_title {
   top: 200px;
   position: absolute;
-  text-align: center;
+  text-align: right;
   width: 100%;
   height: 100px;
   background-color: rgba(0,0,0, 0.6);
@@ -114,9 +137,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     -5px -5px 30px 15px rgba(0,0,0,0.22);
 }
 
-.picturecontent {
-  border-radius: 10px 0 0 10px;
-}
+
 
 #card_text {
   margin: 0 0 0 15px !important;
@@ -124,16 +145,18 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 #card_name {
   color: $melon;
-  font-weight: 500;
-  font-size: 25px;
+  font-weight: 100;
+  font-size: 10px;
 }
 
 #card_email {
-  left: 12px;
-  position: absolute;
+  position: relative;
+  margin-left: 20px;
+  text-align: center;
   display: inline-block;
   height: 25px;
   width: auto;
+  
 }
 
 .title-white {
