--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -140,7 +140,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 
 #card_text {
-  margin: 0 0 0 20px !important;
+  margin: 2px 0 0 20px !important;
 }
 
 #card_name {
