--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -141,6 +141,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 #card_text {
   margin: 2px 0 0 20px !important;
+  text-align: left;
 }
 
 #card_name {
@@ -162,8 +163,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 .title-white {
   color: $melon;
   font-size: 14px;
-
 }
+
 
 .cardcontent {
   display: inline-flex;
