--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -150,9 +150,18 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   font-size: 20px;
 }
 
+#linkedin_logo{
+  position: absolute;
+  margin: 4px 10px 1px 10px;
+  text-align: right;
+  width: 18px;
+  height: 18px;
+}
+
 #card_email {
   position: relative;
   margin-left: 20px;
+  margin-right: 0px;
   text-align: center;
   display: inline-block;
   height: 25px;
