Photos now have a smooth zoom animation

--- a/src/components/PhotoGallery/photo-gallery.scss
+++ b/src/components/PhotoGallery/photo-gallery.scss
@@ -7,7 +7,7 @@
 .photo {
     flex-shrink: 0;
     width: 32%;
-    background-color: antiquewhite; /* for development purpose */
+    //background-color: antiquewhite; /* for development purpose */
     margin-bottom: 20px;
 }
 .square {
