Minor CSS changes, 3 -> 2 pics per row when smaller screen res

--- a/src/components/PhotoGallery/photo-gallery.scss
+++ b/src/components/PhotoGallery/photo-gallery.scss
@@ -8,7 +8,13 @@
     flex-shrink: 0;
     width: 32%;
     //background-color: antiquewhite; /* for development purpose */
-    margin-bottom: 20px;
+    margin-bottom: 2%;
+}
+
+@media (max-width: 767px) {
+    .photo {
+        width: 49%;
+    }
 }
 .square {
     height: 0;
