--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -156,6 +156,15 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   text-align: right;
   width: 18px;
   height: 18px;
+  opacity: 0.9;
+  filter: gray; /* IE5+ */
+      -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
+      -webkit-transition: all .3s ease-in-out; 
+}
+
+#linkedin_logo:hover {
+  filter: none;
+  -webkit-filter: grayscale(0);
 }
 
 #card_email {
