--- a/src/components/ContactCard/contactcard.scss
+++ b/src/components/ContactCard/contactcard.scss
@@ -103,6 +103,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   width: inherit;
   height: inherit;
   border-radius: 40px;
+  background-color: gray;
 }
 
 .card-container .card_image img {
