--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -8,21 +8,21 @@
   transform: translate(-50%, -50%);
 }
 
-
-@-webkit-keyframes pulse {
-    0% { -webkit-transform: scale(0.95); opacity: 0.6; }
-    25% { -webkit-transform: scale(1); opacity: 1; }
-    50% { -webkit-transform: scale(0.95); opacity: 0.6; }
-    75% { -webkit-transform: scale(1); opacity: 1; }
-    100% { -webkit-transform: scale(0.95); opacity: 0.6; }
-}
-
-@keyframes pulse {
-    0% { transform: scale(0.95); opacity: 0.6; }
-    25% { transform: scale(1); opacity: 1; }
-    50% { transform: scale(0.95); opacity: 0.6; }
-    75% { transform: scale(1); opacity: 1; }
-    100% { transform: scale(0.95); opacity: 0.6; }
+.buttoncontainer {
+    margin-top: 50px;
+    .homepagebutton {
+        display: inline-block;
+        margin: 15px 15px 15px 15px;
+        padding: 15px;
+        background-color: $melon;
+        color: white;
+        border-radius: 10px;
+        text-decoration: none !important;
+        transition: transform .2s cubic-bezier(.175,.885,.32,1.275);
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
 }
 
 #header {
@@ -82,24 +82,26 @@
     }
 }
 
+#header:after {
+    content  : "";
+    position : absolute;
+    z-index  : 1;
+    bottom   : 0;
+    left     : 0;
+    pointer-events   : none;
+    background-image : linear-gradient(to bottom, 
+                      rgba(0, 0, 0, 0), 
+                      rgb(0, 0, 0) 90%);
+    width    : 100%;
+    height   : 2em;
+  }
+
 .logo-container {
     @include centerer;
     z-index: 2;
     text-align: center;
     height: 65%;
     margin-top: 5px;
-
-
-    .scroll-arrow{
-        height: 50px;
-        color: $text-color-light;
-        margin-top: 1em;
-        -webkit-animation: pulse 3s infinite ease-in-out;
-        -o-animation: pulse 3s infinite ease-in-out;
-        -ms-animation: pulse 3s infinite ease-in-out;
-        -moz-animation: pulse 3s infinite ease-in-out;
-        animation: pulse 3s infinite ease-in-out;
-    }
 
     img {
         max-height:90%;
@@ -125,6 +127,19 @@
     .logo-container{
         p{
             font-size: 2em;
+        }
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .buttoncontainer {
+        width: 300px;
+        margin-top: -15px;
+        margin-bottom: 10px;
+
+        .homepagebutton {
+            margin-bottom: 0px;
+            margin-top: 10px;
         }
     }
 }
