Banner matching the layout in Asana

--- a/src/components/RecruitmentBanner/recruitment-banner.scss
+++ b/src/components/RecruitmentBanner/recruitment-banner.scss
@@ -1,5 +1,8 @@
-.recruitmentBanner{
+.recruitmentBanner {
   text-align: center;
   color: white;
   background-color: rgb(0,225,141);
+  font-size: 1.5em;
+  text-transform: none;
 }
+
