--- a/src/components/RecruitmentBanner/recruitment-banner.scss
+++ b/src/components/RecruitmentBanner/recruitment-banner.scss
@@ -4,5 +4,10 @@
   background-color: rgb(0,225,141);
   font-size: 1.5em;
   text-transform: none;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  position: -webkit-sticky;
+  position: sticky !important;
+  top: 0;
 }
 
