--- a/src/components/RecruitmentBanner/recruitment-banner.scss
+++ b/src/components/RecruitmentBanner/recruitment-banner.scss
@@ -1,4 +1,6 @@
-.recruitmentBanner {
+@import "../../styles/global";
+
+.recruitmentBanner, .recruitmentBannerMobile {
   text-align: center;
   color: white;
   background-color: rgb(0,225,141);
@@ -8,7 +10,19 @@
   padding-bottom: 8px;
 }
 
-.recruitmentBanner:hover {
+.recruitmentBanner:hover, .recruitmentBannerMobile:hover {
   text-decoration: underline;
   text-decoration-color: white;
+}
+
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+  .recruitmentBanner {
+    display: none;
+  }
+}
+
+@media screen and (min-width: $breakpoint-mobile-flipped) {
+  .recruitmentBannerMobile {
+    display: none;
+  }
 }
