--- a/src/components/RecruitmentBanner/recruitment-banner.scss
+++ b/src/components/RecruitmentBanner/recruitment-banner.scss
@@ -3,7 +3,7 @@
 .recruitmentBanner, .recruitmentBannerMobile {
   text-align: center;
   color: white;
-  background-color: rgb(0,225,141);
+  background-color: #00D790;
   font-size: 1.5em;
   text-transform: none;
   padding-top: 8px;
