Some style changes and code structure

--- a/src/components/Testimonials/testimonials.scss
+++ b/src/components/Testimonials/testimonials.scss
@@ -4,4 +4,11 @@
     background-color: rgb(45,45,45);
     color: $melon;
     border-radius: 10px;
+    padding: 20px 10px;
+}
+
+.testimonial-header {
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
 }
