--- a/src/components/Testimonials/testimonials.scss
+++ b/src/components/Testimonials/testimonials.scss
@@ -1,14 +1,51 @@
 @import "../../styles/_variables";
+.flex-container {
+    display: flex;
+  }
+
+.personal-testimonial {
+    display: flex;
+    width: 50%;
+}
+
+.testimonial-photo{
+    width: 20%;
+}
+
+.testimonial-info{
+    width: 80%;
+    margin-left: 3%;
+    margin-bottom: 3%;
+}
+
+.personal-picture {
+    border-radius: 50%;
+}
+
+.testimonial-name {
+    font-size: 120%;
+}
+
+.testimonial-position{
+    color: white;
+    font-size: 90%;
+}
+
+.testimonial-text{
+    font-size: 75%;
+    color: white;
+}
 
 .testimonials {
     background-color: rgb(45,45,45);
     color: $melon;
     border-radius: 10px;
-    padding: 20px 10px;
+    padding: 20px 20px;
 }
 
 .testimonial-header {
     text-transform: uppercase;
     font-size: 2em;
     text-align: center;
+    margin-bottom: 1%;
 }
