Layout fixed, animation & current page might be added #3

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -2,17 +2,15 @@
 @import "../../styles/_fonts";
 
 .hamburger{
-  //display: block;
+  display: block;
   margin-top: 0em;
 	font-size: 2em;
-  cursor: pointer;
 }
 
 .navbar-cross{
-  //display: block;
+  display: block;
   font-size: 4em;
   margin-top: -0.2em;
-  cursor: pointer;
 }
 
 #navbar{
