removed disfunctioning active link for desktop

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -57,7 +57,7 @@
         }
       }
       .active-page {
-        color: $melon !important;
+        //color: $melon !important;
       }
       a:last-child{border-right: 0 !important;}
     }
