homage page news component

--- a/src/components/PagesList/index.css
+++ b/src/components/PagesList/index.css
@@ -1,6 +1,8 @@
 .list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
+  flex-wrap: wrap;
 }
