--- a/src/components/Newsfeed/newsfeed.scss
+++ b/src/components/Newsfeed/newsfeed.scss
@@ -3,11 +3,13 @@
 .newsfeed {
     margin: 3em 0em 6em 0em; 
 
-    min-height: 100%;
+    min-height: 100%;   
     ul {
         li {
             margin: 1em 0em;
             min-height: 143px;
+            width: 32%;
+            min-height: 100%;
         }
     }
 
@@ -18,8 +20,9 @@ blockquote {
 }
 
 .newsitem.regular {
-    display: flex;
-    flex-direction: row;
+    min-height: 100%;
+    //display: flex;
+    //flex-direction: row;
 }
 
 .armada-news {
@@ -38,8 +41,10 @@ blockquote {
        margin: 3em 0em 6em 0em;  // nytt
         ul {
             li {
-                margin: 3em 0em;
-                min-height: 143px;
+                //margin: 3em 0em;
+                //min-height: 143px;
+                width: 90%;
+                margin-left: 5%;
             }
         }
     }
