--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -1,4 +1,5 @@
 @import '../../styles/_variables';
+@import "../../styles/_fonts";
 
 
 @mixin size($width, $height: $width) {
@@ -18,11 +19,13 @@ img {
     }
     h1,h2 {
       text-align: left;
+      font-size: 1.5em; 
     }
     margin: 0px;
-    padding: 0em 1em;
+    padding: 1em 1em 0 1em;
 }
-.ingress {
+.ingress, .description {
+    font-size: 1rem;
     margin-top: 1em 0em;
 }
 .ingress:hover {
@@ -32,17 +35,28 @@ img {
     padding-bottom: 5px;
 }
 .newsitem.regular {
-    margin: 2em 0em;
-    img {
-		margin: 0em 1em 0em 0em;
+    //margin: 2em 0em;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+
+    .image-container {
+        position: relative; 
+        height: 0;
+        width: 100%;
+        padding-bottom: 58%;
+        background-size: cover;
+        /*
+		//margin: 0em 1em 0em 0em;
         width: auto;
         height: auto;
         max-height: 281px;
+        */
     }
     .regular-news-link {
         width: 100%;
-        display: flex;
-        flex-direction: row;
+        font-size: 1rem;
+        margin-top: 0.5em;
+        //display: flex;
+        //flex-direction: row;
     }
 }
 
@@ -60,6 +74,26 @@ img {
     }
 }
 
+.newsitem-datesection {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: #00d790;
+    border-radius: 50%;
+    padding: 0.2rem 1rem;
+    color: #fff;
+    font-family: $font-title;
+    text-align: center;
+}
+.newsitem-category {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #00d790;
+    padding: 0.2rem 1rem;
+    color: #fff;
+    font-family: $font-title;
+}
 
 
 /*
@@ -77,7 +111,7 @@ img {
 		}
 	}
 }
-*/
+
 @media screen and (max-width: $breakpoint-mobile) {
     .post {
         margin: 0em 0em;
@@ -117,3 +151,4 @@ img {
         }
     }
 }
+*/
