Removed app icons, made div/sus icons unclickable

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -98,12 +98,15 @@
   transition: .3s ease-in-out;
   outline: 0;
 }
+
+/*
 .exhibitors .filter-special input[type='image']:hover{
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
   -webkit-transform: scale(1.25);
   transform: scale(1.25);
 }
+*/
 
 .exhibitors .search-container{
   margin: auto;
