--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -32,7 +32,7 @@
   z-index: 400;
   margin: auto;
   top: 0;
-  width: 50%;
+  width: 100%;
   //border-radius: 5px;
   background: white; //rgba(255, 255, 255, 0.9);
   
@@ -53,7 +53,7 @@
   }
 }
 .cross{
-  color: $text-color-light;
+  color: $text-color-dark;
   padding: 0.05em 0.05em 0.1em 0.05em;
   border-radius: 0em 0em 0.1em 0.1em;
   z-index: 9999;
@@ -72,6 +72,30 @@
 .modalcontent {
   overflow-wrap: break-word;
   text-align: justify;
+
+  .modal-container {
+    display: flex;
+    height: 100vh;
+  }
+  .modal-flex-1 {
+    position: relative;
+    width: 40%;
+    text-align: center;
+    img {
+      max-height: 50vh;
+      width: auto;
+    }
+    .modal-title {
+      padding-top: 10%;
+      padding-right: 10%;
+      padding-left: 10%;
+    }
+  }
+  .modal-flex-2 {
+    width: 60%;
+    text-align: center
+  }
+
   .modalinfo{
     padding: 1em 10px;
   }
@@ -80,6 +104,15 @@
     flex-direction: column;
     padding: 1em 0em 1em 0em;
     align-self: center;
+  }
+  .job-location-container {
+    display: flex !important ;
+    .job-container {
+      width: 50%;
+    }
+    .location-container {
+      width: 50%;
+    }
   }
   .modal-property .icon{
     width: 25px;
@@ -179,7 +212,7 @@ a:hover {
   }
   .cross {
     position: fixed;
-    color: black;
+    color: $text-color-dark;
     right: 15px;
     top: 0px;
   }
